Fix for button handlers when in overflow mode. Also added overflowText to the buttons. Also made the text field a NumberField instead of a DOM element for UI consistency.
git-svn-id: http://code.extjs.com/svn/ext/trunk@4381 c0a82769-a6a8-4f8a-96ba-7530dc2e272d

--- a/resources/css/structure/toolbar.css
+++ b/resources/css/structure/toolbar.css
@@ -144,8 +144,12 @@
 
 /* Paging Toolbar */
 .x-tbar-page-number{
-	width:24px;
+	width:30px;
 	height:14px;
+}
+
+.ext-ie .x-tbar-page-number{
+    margin-top: 2px;
 }
 
 .x-paging-info {
